--- a/app/src/main/res/layout/activity_photo_gallery.xml
+++ b/app/src/main/res/layout/activity_photo_gallery.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -16,7 +17,7 @@
             android:id="@+id/btnBack"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:text="←"
+            android:text="@string/text_arrow_back"
             android:textSize="24sp"
             android:gravity="center"
             android:textColor="@color/ozem_text_primary"
@@ -27,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Minhas Fotos"
+            android:text="@string/gallery_title"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/ozem_text_primary"
