--- a/app/src/main/res/layout/item_injection.xml
+++ b/app/src/main/res/layout/item_injection.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -23,7 +24,7 @@
             android:id="@+id/txtInjectionItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Data - Medicamento - Local"
+            tools:text="Data - Medicamento - Local"
             android:textSize="14sp"
             android:textColor="@color/ozem_text_primary" />
     </LinearLayout>
